; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_sta529.c_sta529_set_dai_fmt.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_sta529.c_sta529_set_dai_fmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_dai = type { %struct.snd_soc_component* }
%struct.snd_soc_component = type { i32 }

@SND_SOC_DAIFMT_FORMAT_MASK = common dso_local global i32 0, align 4
@LEFT_J_DATA_FORMAT = common dso_local global i32 0, align 4
@I2S_DATA_FORMAT = common dso_local global i32 0, align 4
@RIGHT_J_DATA_FORMAT = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@STA529_S2PCFG0 = common dso_local global i32 0, align 4
@DATA_FORMAT_MSK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_dai*, i32)* @sta529_set_dai_fmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sta529_set_dai_fmt(%struct.snd_soc_dai* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_soc_dai*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.snd_soc_component*, align 8
  %7 = alloca i32, align 4
  store %struct.snd_soc_dai* %0, %struct.snd_soc_dai** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %4, align 8
  %9 = getelementptr inbounds %struct.snd_soc_dai, %struct.snd_soc_dai* %8, i32 0, i32 0
  %10 = load %struct.snd_soc_component*, %struct.snd_soc_component** %9, align 8
  store %struct.snd_soc_component* %10, %struct.snd_soc_component** %6, align 8
  store i32 0, i32* %7, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @SND_SOC_DAIFMT_FORMAT_MASK, align 4
  %13 = and i32 %11, %12
  switch i32 %13, label %20 [
    i32 129, label %14
    i32 130, label %16
    i32 128, label %18
  ]

14:                                               ; preds = %2
  %15 = load i32, i32* @LEFT_J_DATA_FORMAT, align 4
  store i32 %15, i32* %7, align 4
  br label %23

16:                                               ; preds = %2
  %17 = load i32, i32* @I2S_DATA_FORMAT, align 4
  store i32 %17, i32* %7, align 4
  br label %23

18:                                               ; preds = %2
  %19 = load i32, i32* @RIGHT_J_DATA_FORMAT, align 4
  store i32 %19, i32* %7, align 4
  br label %23

20:                                               ; preds = %2
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %3, align 4
  br label %29

23:                                               ; preds = %18, %16, %14
  %24 = load %struct.snd_soc_component*, %struct.snd_soc_component** %6, align 8
  %25 = load i32, i32* @STA529_S2PCFG0, align 4
  %26 = load i32, i32* @DATA_FORMAT_MSK, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %24, i32 %25, i32 %26, i32 %27)
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %23, %20
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @snd_soc_component_update_bits(%struct.snd_soc_component*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
